add style to github.html

--- a/css/gitstyle.css
+++ b/css/gitstyle.css
@@ -35,3 +35,9 @@ nav a:active {
     font-size: 20px;
     background-color: #EEE;
 }
+.table {
+    padding-right: 200px;
+}
+.link-space{
+    padding-right: 100px;
+}
