--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,41 @@
-h1 {
-    color: purple;
-
-}
 
 .fancy-header{
-    color: purple;
+    color: darkblue;
     text-decoration: underline;
+    text-align: center;
+}
+.center{
+    text-align: center;
+}
+h2{
+    color: darkcyan;
+}
+body{
+    background-color: azure;
+    font-family: Tahoma;
+    background-image: url("../img/welcome-background.jpg");
+}
+ul{
+    list-style-type: square ;
+}
+td{
+    padding:20px;
+    font-size: 20px;
+}
+th{
+    font-size: 30px;
+}
+a:link{
+    color: darkblue;
+}
+a:visited{
+    color: darkgrey;
+}
+a:hover{
+    font-size: 18px;
+    color: dodgerblue;
+
+}
+a:active{
+    color:black;
 }
