--- a/css/style.css
+++ b/css/style.css
@@ -4,38 +4,50 @@
     text-decoration: underline;
     text-align: center;
 }
+
 .center{
     text-align: center;
 }
+
 h2{
-    color: darkcyan;
+    color: #003595;
+    text-align: center;
 }
+
+
+
 body{
-    background-color: azure;
-    font-family: Tahoma;
-    background-image: url("../img/welcome-background.jpg");
+    font-family: cambria, sans-serif;
+    background-image: url("../img/white-background.jpg");
 }
-ul{
-    list-style-type: square ;
+li{
+    list-style-type:square ;
+
 }
-td{
+#paychart td{
     padding:20px;
     font-size: 20px;
 }
-th{
+#paychart th{
     font-size: 30px;
 }
 a:link{
     color: darkblue;
 }
 a:visited{
-    color: darkgrey;
+    color: black;
 }
 a:hover{
     font-size: 18px;
-    color: dodgerblue;
+    color: darkgrey;
 
 }
 a:active{
     color:black;
 }
+
+table.centered{
+    margin-right: auto;
+    margin-left: auto;
+}
+
