--- a/css/login.css
+++ b/css/login.css
@@ -24,7 +24,7 @@ fieldset {
     -moz-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     padding: 1em;
-    border: 0px;
+    border: none;
     background-color: #fff;
     /* There must be 1em between the content and the border of this element */
     /* It should have no border */
@@ -40,8 +40,8 @@ fieldset {
 
 .form-group {
     width: 100%;
-    margin-top: .5em;
-    margin-bottom: .5em;
+    margin: .5em 0;
+
 
     /* This element must use 100% of the width */
     /* It should have a separation of .5em from elements on top of it and below it*/
@@ -51,21 +51,6 @@ fieldset {
     font-weight:bold;
     /* The text of a label must be bold */
 
-}
-
-.form-control {
-    padding-top: 4px;
-    padding-bottom: 4px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    /* There must be 4px on top of the text and below the text of an input with this class */
-    /* It should have a separation of .5em from elements on top of it and below it */
-
-    /* You'll need to use the `calc` function to make the width of this element match the width of the button */
-    /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
-    /* HINT: Calculate based on the padding of the `.btn` class */
-    /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: calc(100% - 4px) ;
 }
 
 .btn {
@@ -84,3 +69,19 @@ fieldset {
     width: 100%;
     /* This element should use 100% of the width */
 }
+
+.form-control {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    margin-top: .5em;
+    margin-bottom: .5em;
+    /* There must be 4px on top of the text and below the text of an input with this class */
+    /* It should have a separation of .5em from elements on top of it and below it */
+
+    /* You'll need to use the `calc` function to make the width of this element match the width of the button */
+    /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
+    /* HINT: Calculate based on the padding of the `.btn` class */
+    /* HINT: Examples are available at: https://glitch.com/~input-button-width */
+    width: calc(100% - 4px) ;
+}
+
