--- a/css/messages.css
+++ b/css/messages.css
@@ -8,10 +8,11 @@ body, html {
 
 div{
     margin: 5px;
-    padding: 3px;
+    padding: 5px;
     width: 500px;
     border-radius: 5px;
-    border: 1px solid;
+    border: 1px solid lightgray;
+    font-size: small;
 }
 
 .message-info{
