--- a/css/messages.css
+++ b/css/messages.css
@@ -9,7 +9,7 @@ body, html {
 div{
     margin: 5px;
     padding: 5px;
-    width: 500px;
+    width: calc(100% - 2em);
     border-radius: 5px;
     border: 1px solid lightgray;
     font-size: small;
