--- a/css/twitter.css
+++ b/css/twitter.css
@@ -53,15 +53,20 @@ a {
 }
 .profile {
     background: var(--light-bg);
+    height: 80px;
 }
 .profile-image{
     position: absolute;
-    top: 220px;
+    top: 245px;
 }
 .profile-details{
-    width: calc(25% -.5em);
+    width: calc(25% - 1em);
     float: left;
     margin: 0  .5em;
+}
+.profile-form{
+    float: right;
+    line-height: 80px;
 }
 .btn {
     border: 1px solid var(--main-link-color);
@@ -86,12 +91,12 @@ a {
     color: var(--main-link-color);
 }
 .timeline{
-    width: calc(50% - .5em);
+    width: calc(50% - 1em);
     float: left;
     margin: 0  .5em;
 }
 .who-to-follow{
-    width: calc(25% - .5em);
+    width: calc(25% - 1em);
     float: right;
     margin: 0 .5em;
 }
