--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -34,6 +34,9 @@ h2, h3 {
     background: white;
     padding: 1em;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     /* enter needed declarations here */
 }
 
@@ -61,8 +64,6 @@ section:nth-of-type(1) div:last-child {
     background: fuchsia;
     width: 3em;
     height: 1em;
-    margin-bottom: 1em;
-    margin-top: 1em;
 }
 
 .purple-box:nth-of-type(1) {
@@ -80,7 +81,7 @@ section:nth-of-type(1) div:last-child {
     width: 100%;
     background: blue;
     height: 10em;
-    margin-bottom: 1em;
+
 
 }
 
@@ -104,14 +105,12 @@ section:nth-of-type(3) h3 {
     height: 2em;
     border-radius: 1em;
     margin: .5em;
-    margin-bottom: 1em;
 }
 
 .large-brown-box {
     height: 5em;
     width: 5em;
     background: brown;
-    margin-bottom: 1em;
     flex-basis: 80%;
     /* enter needed declarations here */
 }
@@ -129,7 +128,6 @@ section:nth-of-type(5) {
     background: yellow;
     width: 2em;
     height: 2em;
-    margin-bottom: 1em;
 }
 
 section:nth-of-type(6) {
