--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -30,6 +30,7 @@ body {
     position: relative;
     border:20px solid rgba(0,0,0,0.3);
     border-radius:5px;
+    display: flex;
 }
 
 .flex-form > * {
@@ -41,6 +42,7 @@ body {
     border-radius: 0;
     outline: 0;
     -webkit-appearance: none;
+
 }
 
 .btn-primary {
@@ -56,6 +58,8 @@ body {
     /* flex container */
     display: flex;
     justify-content: center;
+    align-content: center;
+
 
 
 }
@@ -68,6 +72,6 @@ body {
 
 .destination {
     /* bigger item */
-
+    width: 13em;
 
 }
