--- a/css/flexbox-cards.css
+++ b/css/flexbox-cards.css
@@ -68,25 +68,14 @@ a {
 .container {
     /* This is a flex container */
     display: flex;
+    align-items: center;
 }
 
 .card {
-    align-items: center;
 
+    flex-basis: 100%;
 
     /* This is a flex item */
 
 }
 
-.card:nth-of-type(1){
-    margin: 3em 1em;
-
-}
-
-.card:nth-of-type(2) {
-    margin: 1em 1em;
-
-}
-.card:nth-of-type(3){
-    margin: 2em 1em;
-}
