--- a/css/custom.css
+++ b/css/custom.css
@@ -15,6 +15,17 @@ body{
     padding: 0;
 }
 
+
+
+.nav-item{
+    padding: 3px 0;
+}
+
+.nav-item:hover{
+    background-color: #ededed;
+    transition: .2s;
+}
+
 .jumbotron{
     background-image: url("../img/pizza.jpg");
 
@@ -23,9 +34,11 @@ body{
 
 .jumbotron h1{
     background-color: lightgray;
-    opacity: 0.5;
+    opacity: 0.6;
     width: 100%;
     text-align: center;
+    font-family: Dialog;
+    font-weight: bold;
 
 }
 
@@ -97,7 +110,7 @@ body{
     background-color: #eee;
 }
 
-.form-control{
+.form-sizing{
     width: 97%;
     margin: 1em;
 
@@ -106,3 +119,20 @@ body{
 label{
      margin-left: .5em;
  }
+
+.flex-right{
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.btn-text1{
+    text-decoration: none;
+    color: white;
+    padding: 100% 0;
+}
+.btn-text1:hover{
+    text-decoration: none;
+    color: white;
+    padding: 100% 0;
+
+}
