--- a/css/weather.css
+++ b/css/weather.css
@@ -15,6 +15,21 @@
 
 }
 
+.mapboxgl-ctrl-geocoder--input{
+
+    z-index:1;
+    width:100%;
+    height: 2.5em;
+
+}
+.mapboxgl-ctrl-geocoder--pin-right{
+    display: none;
+}
+
+ .mapboxgl-ctrl-geocoder--icon-search{
+    display: none;
+}
+
 .card{
     text-align: center;
     margin-top: 1em;
@@ -113,7 +128,7 @@ header #time{
     border-color: #202020;
 }
 
-.nightmode #search, select, textarea{
+.nightmode .mapboxgl-ctrl-geocoder--input, select, textarea{
     background-color: #848487;
     color: whitesmoke;
 }
